--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
-    "name": "spl-creator",
-    "version": "1.0.0",
-    "description": "",
-    "main": "src/main.js",
-    "type": "module",
-    "scripts": {
-        "start": "node src/main.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@metaplex-foundation/js": "^0.19.5",
-        "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
-        "@project-serum/anchor": "^0.26.0",
-        "@solana/spl-token": "^0.3.9",
-        "@solana/web3.js": "^1.87.6",
-        "inquirer": "^9.2.12",
-        "readline": "^1.3.0"
-    }
+  "name": "spl-creator",
+  "version": "1.0.0",
+  "description": "Advanced SPL Token Creator with enhanced UI and error handling",
+  "main": "src/main.js",
+  "type": "module",
+  "scripts": {
+    "start": "node --no-deprecation src/main.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write src/**/*.js"
+  },
+  "keywords": [
+    "solana",
+    "spl",
+    "token",
+    "creator",
+    "blockchain"
+  ],
+  "author": "BankkRoll",
+  "license": "ISC",
+  "dependencies": {
+    "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
+    "@solana/spl-token": "^0.3.9",
+    "@solana/web3.js": "^1.89.1",
+    "bs58": "^5.0.0",
+    "chalk": "^5.3.0",
+    "figlet": "^1.7.0",
+    "gradient-string": "^2.0.2",
+    "inquirer": "^9.2.12",
+    "nanospinner": "^1.1.0"
+  }
 }
